plugins {
    id 'java'
    id 'io.quarkus'
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation 'io.quarkus:quarkus-container-image-buildpack'
    implementation 'io.quarkus:quarkus-container-image-docker'
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusCamelArtifactId}:${quarkusPlatformVersion}")
    implementation 'io.quarkus:quarkus-arc'
    
//    implementation "org.jboss.logmanager:log4j2-jboss-logmanager"

//    restful
//    implementation 'io.quarkus:quarkus-resteasy'
//    implementation 'io.quarkus:quarkus-resteasy-jackson'
//    implementation 'io.quarkus:quarkus-resteasy-jaxb'
//    implementation "io.quarkus:quarkus-resteasy-jsonb"
//    implementation "io.quarkus:quarkus-resteasy-qute"

//    reactive
    implementation "io.quarkus:quarkus-vertx"
    implementation "io.quarkus:quarkus-reactive-routes"
    implementation "io.quarkus:quarkus-reactive-messaging-http"
    
    implementation "io.quarkus:quarkus-resteasy-reactive"
    implementation "io.quarkus:quarkus-resteasy-reactive-jackson"
    implementation "io.quarkus:quarkus-resteasy-reactive-jaxb"
    implementation "io.quarkus:quarkus-resteasy-reactive-qute"
//    implementation "io.smallrye.reactive:smallrye-mutiny-vertx-web-client"

//    implementation "io.quarkus:quarkus-resteasy-mutiny"
//    implementation "io.quarkus:quarkus-smallrye-context-propagation"
    implementation "io.quarkus:quarkus-cache"

//    implementation "io.quarkus:quarkus-scheduler"
//    implementation "io.quarkus:quarkus-quartz"
    implementation "io.quarkus:quarkus-security"
    implementation 'io.quarkus:quarkus-websockets'


//    implementation "io.quarkus:quarkus-hibernate-orm"
//    implementation "io.quarkus:quarkus-narayana-jta"
//    implementation "io.quarkus:quarkus-jdbc-postgresql"
//    implementation "io.quarkus:quarkus-jdbc-h2"
    implementation "io.quarkus:quarkus-hibernate-validator"
    implementation "io.quarkus:quarkus-hibernate-reactive"
    implementation "io.quarkus:quarkus-reactive-pg-client"

//    implementation "org.apache.camel.quarkus:camel-quarkus-core"
//    implementation "org.apache.camel.quarkus:camel-quarkus-netty"
//    implementation "org.apache.camel.quarkus:camel-quarkus-netty-http"

    implementation "org.jboss.logmanager:log4j2-jboss-logmanager";

    implementation "org.bouncycastle:bcprov-jdk15on"
    implementation "org.bouncycastle:bctls-jdk15on"
//    implementation "org.bouncycastle:bc-fips"
//    implementation "org.bouncycastle:bctls-fips"

//    implementation 'io.quarkus:quarkus-spring-data-jpa'

    testImplementation 'io.quarkus:quarkus-junit5'
    testImplementation 'io.rest-assured:rest-assured'
}

group 'org.harryng.demo.quarkus'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-parameters'
}

compileTestJava {
    options.encoding = 'UTF-8'
}
